; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_ds.c_ds_bts_control.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_ds.c_ds_bts_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64* }
%struct.bts_tracer = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@ds_cfg = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@dsf_bts = common dso_local global i64 0, align 8
@BTS_KERNEL = common dso_local global i32 0, align 4
@dsf_bts_kernel = common dso_local global i64 0, align 8
@BTS_USER = common dso_local global i32 0, align 4
@dsf_bts_user = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.bts_tracer*)* @ds_bts_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ds_bts_control(%struct.bts_tracer* %0) #0 {
  %2 = alloca %struct.bts_tracer*, align 8
  %3 = alloca i64, align 8
  store %struct.bts_tracer* %0, %struct.bts_tracer** %2, align 8
  %4 = load i64*, i64** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ds_cfg, i32 0, i32 0), align 8
  %5 = load i64, i64* @dsf_bts, align 8
  %6 = getelementptr inbounds i64, i64* %4, i64 %5
  %7 = load i64, i64* %6, align 8
  store i64 %7, i64* %3, align 8
  %8 = load %struct.bts_tracer*, %struct.bts_tracer** %2, align 8
  %9 = getelementptr inbounds %struct.bts_tracer, %struct.bts_tracer* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @BTS_KERNEL, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %1
  %17 = load i64*, i64** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ds_cfg, i32 0, i32 0), align 8
  %18 = load i64, i64* @dsf_bts_kernel, align 8
  %19 = getelementptr inbounds i64, i64* %17, i64 %18
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* %3, align 8
  %22 = or i64 %21, %20
  store i64 %22, i64* %3, align 8
  br label %23

23:                                               ; preds = %16, %1
  %24 = load %struct.bts_tracer*, %struct.bts_tracer** %2, align 8
  %25 = getelementptr inbounds %struct.bts_tracer, %struct.bts_tracer* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @BTS_USER, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %39, label %32

32:                                               ; preds = %23
  %33 = load i64*, i64** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @ds_cfg, i32 0, i32 0), align 8
  %34 = load i64, i64* @dsf_bts_user, align 8
  %35 = getelementptr inbounds i64, i64* %33, i64 %34
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* %3, align 8
  %38 = or i64 %37, %36
  store i64 %38, i64* %3, align 8
  br label %39

39:                                               ; preds = %32, %23
  %40 = load i64, i64* %3, align 8
  ret i64 %40
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
